# util-linux

./: .bazelignore  BUILD.bazel  MODULE.bazel  defs.bzl  version.bzl
include/: BUILD.bazel
lib/: BUILD.bazel  meson.build
libblkid/: BUILD.bazel  MODULE.bazel
libmount/: BUILD.bazel  MODULE.bazel  version_extension.bzl
