module(name = "util_linux")

bazel_dep(name = "bazel_skylib", version = "1.9.0")


bazel_dep(name = "rules_cc_autoconf", version = "0.5.3")
local_path_override(module_name="rules_cc_autoconf",path="../rules_cc_autoconf")

bazel_dep(name = "rules_cc", version = "0.2.17")

bazel_dep(name = "platforms", version = "1.0.0")
