load("@rules_cc_autoconf//autoconf:cc_autoconf_info.bzl", "CcAutoconfInfo")
load("@rules_cc_autoconf//autoconf:package_info.bzl", "package_info")
load("@rules_cc_autoconf//autoconf:autoconf.bzl", "autoconf")
load("@rules_cc_autoconf//autoconf:autoconf_hdr.bzl", "autoconf_hdr")
load("@rules_cc_autoconf//autoconf:meson_hdr.bzl", "meson_hdr")
load("@rules_cc_autoconf//autoconf:checks.bzl", "checks")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_static_library.bzl", "cc_static_library")

load("@util_linux//:version.bzl", "libblkid_date", "libblkid_version")

dir_libblkid = [".","src"]

autoconf(
    name = "autoconf",
    checks = [
        checks.AC_DEFINE("LIBBLKID_DATE", libblkid_date),
        checks.AC_DEFINE("LIBBLKID_VERSION", libblkid_version)
    ]
)

meson_hdr(
    name = "gen_blkid_h",
    out = "blkid.h",
    deps = ["autoconf"],
    template = "src/blkid.h.in"
)

lib_blkid_sources = [s.strip() for s in '''
  src/blkidP.h
  src/init.c
  src/cache.c
  src/config.c
  src/dev.c
  src/devname.c
  src/devno.c
  src/encode.c
  src/evaluate.c
  src/getsize.c
  src/probe.c
  src/read.c
  src/resolve.c
  src/save.c
  src/tag.c
  src/verify.c
  src/version.c

  src/partitions/aix.c
  src/partitions/aix.h
  src/partitions/atari.c
  src/partitions/bsd.c
  src/partitions/dos.c
  src/partitions/gpt.c
  src/partitions/mac.c
  src/partitions/minix.c
  src/partitions/partitions.c
  src/partitions/partitions.h
  src/partitions/sgi.c
  src/partitions/solaris_x86.c
  src/partitions/sun.c
  src/partitions/ultrix.c
  src/partitions/unixware.c

  src/superblocks/adaptec_raid.c
  src/superblocks/apfs.c
  src/superblocks/bcache.c
  src/superblocks/befs.c
  src/superblocks/bfs.c
  src/superblocks/bitlocker.c
  src/superblocks/bluestore.c
  src/superblocks/btrfs.c
  src/superblocks/cs_fvault2.c
  src/superblocks/cramfs.c
  src/superblocks/ddf_raid.c
  src/superblocks/drbd.c
  src/superblocks/drbdproxy_datalog.c
  src/superblocks/drbdmanage.c
  src/superblocks/exfat.c
  src/superblocks/exfs.c
  src/superblocks/ext.c
  src/superblocks/f2fs.c
  src/superblocks/gfs.c
  src/superblocks/hfs.c
  src/superblocks/highpoint_raid.c
  src/superblocks/hpfs.c
  src/superblocks/iso9660.c
  src/superblocks/isw_raid.c
  src/superblocks/jfs.c
  src/superblocks/jmicron_raid.c
  src/superblocks/linux_raid.c
  src/superblocks/lsi_raid.c
  src/superblocks/luks.c
  src/superblocks/lvm.c
  src/superblocks/minix.c
  src/superblocks/mpool.c
  src/superblocks/netware.c
  src/superblocks/nilfs.c
  src/superblocks/ntfs.c
  src/superblocks/refs.c
  src/superblocks/nvidia_raid.c
  src/superblocks/ocfs.c
  src/superblocks/promise_raid.c
  src/superblocks/reiserfs.c
  src/superblocks/romfs.c
  src/superblocks/scoutfs.c
  src/superblocks/silicon_raid.c
  src/superblocks/squashfs.c
  src/superblocks/stratis.c
  src/superblocks/superblocks.c
  src/superblocks/superblocks.h
  src/superblocks/swap.c
  src/superblocks/sysv.c
  src/superblocks/ubi.c
  src/superblocks/ubifs.c
  src/superblocks/udf.c
  src/superblocks/ufs.c
  src/superblocks/vdo.c
  src/superblocks/vfat.c
  src/superblocks/via_raid.c
  src/superblocks/vmfs.c
  src/superblocks/vxfs.c
  src/superblocks/xfs.c
  src/superblocks/zfs.c
  src/superblocks/zonefs.c
  src/superblocks/erofs.c

  src/topology/topology.c
  src/topology/topology.h
'''.splitlines() if s.strip()]


lib_blkid_sources += select(
    {
        "@platforms//os:linux": [
              "src/topology/dm.c",
    "src/topology/evms.c",
    "src/topology/ioctl.c",
    "src/topology/lvm.c",
    "src/topology/md.c",
    "src/topology/sysfs.c"
        ],
        "//conditions:default": [],
    }
)






cc_library(name = "libblkid_shared", 
                  hdrs = ["@util_linux//include:list.h"],
                  srcs = lib_blkid_sources,
                  includes = dir_libblkid,
                  deps = ["@util_linux//include:dir_include",
                          "@util_linux//lib:common"],
                  linkopts = ['-Wl,--version-script=src/libblkid.sym'],
                  data =["src/libblkid.sym"]
)

cc_library(name = "libblkid_static", 
                  hdrs = ["@util_linux//include:list.h"],
                  srcs = lib_blkid_sources,
                  includes = dir_libblkid,
                  deps = ["@util_linux//include:dir_include",
                          "@util_linux//lib:common"],
                  linkopts = ['-Wl,--version-script=src/libblkid.sym'],
                  data =["src/libblkid.sym"],
                  linkstatic = True,
)

