bazel_dep("util_linux", version = "0.0.0")
local_path_override(
    module_name = "util_linux",
    path = "..", 
)

module(name = "libmount", version = "2.43.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_cc_autoconf", version = "0.5.3")
