load("@rules_cc_autoconf//autoconf:cc_autoconf_info.bzl", "CcAutoconfInfo")
load("@rules_cc_autoconf//autoconf:package_info.bzl", "package_info")
load("@rules_cc_autoconf//autoconf:autoconf.bzl", "autoconf")
load("@rules_cc_autoconf//autoconf:autoconf_hdr.bzl", "autoconf_hdr")
load("@rules_cc_autoconf//autoconf:meson_hdr.bzl", "meson_hdr")
load("@rules_cc_autoconf//autoconf:checks.bzl", "checks")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_static_library.bzl", "cc_static_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@util_linux//:version.bzl", "libmount_version")

bool_flag(name = "btrfs",
          build_setting_default = True)

config_setting(
    name = "enable_btrfs",
    flag_values = {
        ":btrfs": "true",
    },
)

dir_libmount = [".","src"]


[major, minor,patch] = libmount_version.split(".")

autoconf(
        name = "config",
        checks = [
            checks.AC_DEFINE("LIBMOUNT_VERSION",libmount_version ),
            checks.AC_DEFINE("LIBMOUNT_MAJOR_VERSION", major),
            checks.AC_DEFINE("LIBMOUNT_MINOR_VERSION", minor),
            checks.AC_DEFINE("LIBMOUNT_PATCH_VERSION", patch),
            
        ],
    )

meson_hdr(name= "gen_config",
             template = "src/libmount.h.in",
             out = "libmount.h",
             deps = ["config"],
)

lib_mount_sources = [s.strip() for s in '''
  src/mountP.h
  src/cache.c
  src/fs.c
  src/fs_statmount.c
  src/init.c
  src/iter.c
  src/lock.c
  src/optmap.c
  src/optstr.c
  src/tab.c
  src/tab_diff.c
  src/tab_listmount.c
  src/tab_parse.c
  src/tab_update.c
  src/test.c
  src/utils.c
  src/version.c
'''.splitlines() if s.strip()] + [
  "@util_linux//include:list_h",
  "@util_linux//src:monotonic.c",
] + select({
    "enable_btrfs": [
        "src/monitor_btrfs.c",
    ],
    "//conditions:default": [],
})

linux_srcs = [s.strip() for s in '''
    src/hooks.c
    src/monitor.c
    src/monitor.h
    src/monitor_utab.c
    src/monitor_mountinfo.c
    src/monitor_fanotify.c
    src/optlist.c
    src/hook_veritydev.c
    src/hook_subdir.c
    src/hook_owner.c
    src/hook_mount.c
    src/hook_mount_legacy.c
    src/hook_mkdir.c
    src/hook_selinux.c
    src/hook_loopdev.c
    src/hook_idmap.c
    src/context_umount.c
    src/context_mount.c
    src/context.c
'''.splitlines()]

cc_library(name = "_mount",
srcs = lib_mount_sources,
includes = dir_libmount,
deps = ["@util_linux//include:dir_include"],
)



cc_static_library(name = "libmount_static",
                deps = ["_mount",
                "@util_linux//lib:common","@libblkid//:libblkid_static"], )
